--- a/views/html-layout.templ
+++ b/views/html-layout.templ
@@ -22,6 +22,9 @@ templ html(title string) {
       </script>
 		</head>
 		<body>
+			<p class="absolute top-2 right-2 text-sm text-blue-300">
+				<a href="mailto:v.cocaud+wwg@gmail.com">Besoin d'aide ?</a>
+			</p>
 			{ children... }
 			<script src="https://unpkg.com/htmx.org/dist/htmx.js"></script>
 		</body>
