--- a/views/form-components.templ
+++ b/views/form-components.templ
@@ -8,29 +8,51 @@ var (
 	authFormClass = "w-80 rounded m-auto p-4 mt-20 shadow-md flex flex-col gap-2"
 )
 
-templ field(label string, name string, values url.Values, errors map[string]string, attrs templ.Attributes) {
-	<input
-		name={ name }
-		placeholder={ label }
-		class={
-			templ.KV("border-red-500", errors[name] != ""),
-			"border rounded-sm py-1 px-3",
-			attrs["class"],
-		}
-		{ attrs... }
-		value={ values.Get(name) }
-	/>
-	@formError(errors[name])
+type FormModel struct {
+	Values url.Values
+	Errors Errors
 }
 
-templ button(attrs templ.Attributes) {
+type Errors map[string]string
+
+type FieldModel struct {
+	FormModel
+	Label    string
+	Name     string
+	Required bool
+	Type     string
+	Attrs    templ.Attributes
+}
+
+templ field(model FieldModel) {
+	<input
+		name={ model.Name }
+		placeholder={ model.Label }
+		class={
+			templ.KV("border-red-500", model.Errors[model.Name] != ""),
+			"border rounded-sm py-1 px-3",
+			model.Attrs["class"],
+		}
+		if model.Required {
+			required
+		}
+		if model.Type != "" {
+			type={ model.Type }
+		}
+		{ model.Attrs... }
+		value={ model.Values.Get(model.Name) }
+	/>
+	@formError(model.Errors[model.Name])
+}
+
+templ button(attrs ...templ.Attributes) {
 	<button
+		{ expect1(attrs)... }
 		class={
 			"bg-blue-500 text-white py-1 px-3 rounded-sm relative",
 			"disabled:opacity-50 disabled:cursor-not-allowed transition-opacity",
-			attrs["class"],
+			expect1(attrs)["class"],
 		}
-		{ attrs... }
 	>
 		<img src="/static/images/spinner.svg" class="show-when-loading h-8 absolute inset-0 m-auto"/>
 		<span class="hide-when-loading">
@@ -39,15 +61,15 @@ templ button(attrs templ.Attributes) {
 	</button>
 }
 
-templ formError(err string) {
+templ formError(err string, attrs ...templ.Attributes) {
 	if err != "" {
-		<span class="text-red-500">{ " " + err }</span>
+		<span { expect1(attrs)... } class="text-red-500">{ " " + err }</span>
 	}
 }
 
 templ authForm(title string, attrs ...templ.Attributes) {
 	<form
-		{ mergeAttributes(attrs)... }
+		{ expect1(attrs)... }
 		hx-post
 		hx-swap="outerHTML"
 		hx-disabled-elt="button"
@@ -60,8 +82,8 @@ templ authForm(title string, attrs ...templ.Attributes) {
 	</form>
 }
 
-templ authFooter() {
-	<p class="w-80 m-auto mt-10 text-center">
+templ authFooter(attrs ...templ.Attributes) {
+	<p { expect1(attrs)... } class="w-80 m-auto mt-10 text-center">
 		{ children... }
 	</p>
 }
