:sparkles: add password reset

--- a/static/css/tailwind.css
+++ b/static/css/tailwind.css
@@ -615,6 +615,10 @@ video {
   width: 20rem;
 }
 
+.w-full {
+  width: 100%;
+}
+
 .flex-col {
   flex-direction: column;
 }
@@ -667,6 +671,10 @@ video {
   text-align: center;
 }
 
+.text-end {
+  text-align: end;
+}
+
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
@@ -675,6 +683,11 @@ video {
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 .text-blue-300 {
@@ -738,5 +751,9 @@ video {
 
 .disabled\:opacity-50:disabled {
   opacity: 0.5;
+}
+
+.\[\&_button\]\:last-of-type\:mt-4:last-of-type button {
+  margin-top: 1rem;
 }
 
