--- a/views/html-layout.templ
+++ b/views/html-layout.templ
@@ -22,7 +22,7 @@ templ html(title string) {
       </script>
 		</head>
 		<body>
-			<p class="absolute top-2 right-2 text-sm text-blue-300">
+			<p class="absolute top-2 right-2 text-sm text-blue-300 print:hidden">
 				<a href="mailto:v.cocaud+wwg@gmail.com">Besoin d'aide ?</a>
 			</p>
 			{ children... }
