--- a/views/form-components.templ
+++ b/views/form-components.templ
@@ -73,7 +73,7 @@ templ authForm(title string, attrs ...templ.Attributes) {
 		hx-post
 		hx-swap="outerHTML"
 		hx-disabled-elt="button"
-		class="w-80 rounded m-auto p-4 mt-20 shadow-md flex flex-col gap-2 [&_button]:last-of-type:mt-4"
+		class="w-80 rounded m-auto p-4 mt-20 shadow-md flex flex-col gap-2 [&_button]:last-of-type:mt-4 print:shadow-none"
 	>
 		<h1 class="text-2xl mb-4 text-center">
 			{ title }
