--- a/views/reset-password.templ
+++ b/views/reset-password.templ
@@ -5,25 +5,34 @@ type PasswordForgottenModel struct {
 	EmailSent bool
 }
 
+type PasswordForgottenFormValues struct {
+	Email string `form:"Email" tr:"Email" validate:"required,email"`
+}
+
+type ResetPasswordFormValues struct {
+	Password string `form:"Password" tr:"Mot de passe"                 validate:"required,min=16"`
+	Confirm  string `form:"Confirm"  tr:"Confirmation du mot de passe" validate:"required,eqfield=Password"`
+}
+
 templ PasswordForgottenPage(resetError string) {
 	@html("Woody Wood Gate - Mot de passe oublié") {
-		@PasswordForgottenForm(PasswordForgottenModel{FormModel: FormModel{
-			Errors: map[string]string{"reset": resetError},
-		}})
+		@PasswordForgottenForm(PasswordForgottenModel{
+			FormModel: NewFormError(resetError),
+		})
 	}
 }
 
 templ PasswordForgottenForm(model PasswordForgottenModel) {
-	@authForm("Mot de passe oublié") {
-		@formError(model.Errors["reset"])
+	@authForm("Mot de passe oublié", model.FormModel) {
 		<p>
 			Veuillez fournir l'adresse email associée à votre compte.
 		</p>
-		@field(FieldModel{FormModel: model.FormModel,
-			Label: "Email", Name: "email", Required: true,
-		})
 		if model.EmailSent {
 			<p class="text-green-500">Un email contenant un lien de réinitialisation vous a été envoyé.</p>
+		} else {
+			@field(FieldModel{FormModel: model.FormModel,
+				Label: "Email", Name: "Email", Required: true,
+			})
 		}
 		@button(templ.Attributes{"type": "submit"}) {
 			Envoyer le lien de réinitialisation
@@ -33,21 +42,20 @@ templ PasswordForgottenForm(model PasswordForgottenModel) {
 
 templ ResetPasswordPage() {
 	@html("Woody Wood Gate - Réinitialisation du mot de passe") {
-		@ResetPasswordForm(FormModel{})
+		@ResetPasswordForm(NewFormModel(nil, nil))
 	}
 }
 
 templ ResetPasswordForm(model FormModel) {
-	@authForm("Réinitialisation du mot de passe") {
+	@authForm("Réinitialisation du mot de passe", model) {
 		@field(FieldModel{FormModel: model,
-			Label: "Nouveau mot de passe", Name: "password", Required: true, Type: "password",
+			Label: "Nouveau mot de passe", Name: "Password", Required: true, Type: "password",
 		})
 		@field(FieldModel{FormModel: model,
-			Label: "Confirmer le mot de passe", Name: "confirm", Required: true, Type: "password",
+			Label: "Confirmer le mot de passe", Name: "Confirm", Required: true, Type: "password",
 		})
 		@button(templ.Attributes{"type": "submit"}) {
 			Changer le mot de passe
 		}
-		@formError(model.Errors["form"])
 	}
 }
