--- a/views/reset-password.templ
+++ b/views/reset-password.templ
@@ -1,7 +1,9 @@
 package views
 
+import c "woody-wood-portail/views/components"
+
 type PasswordForgottenModel struct {
-	FormModel
+	c.FormModel
 	EmailSent bool
 }
 
@@ -17,24 +19,24 @@ type ResetPasswordFormValues struct {
 templ PasswordForgottenPage(resetError string) {
 	@html("Woody Wood Gate - Mot de passe oublié") {
 		@PasswordForgottenForm(PasswordForgottenModel{
-			FormModel: NewFormError(resetError),
+			FormModel: c.NewFormError(resetError),
 		})
 	}
 }
 
 templ PasswordForgottenForm(model PasswordForgottenModel) {
-	@authForm("Mot de passe oublié", model.FormModel) {
+	@c.AuthForm("Mot de passe oublié", model.FormModel) {
 		<p>
 			Veuillez fournir l'adresse email associée à votre compte.
 		</p>
 		if model.EmailSent {
 			<p class="text-green-500">Un email contenant un lien de réinitialisation vous a été envoyé.</p>
 		} else {
-			@field(FieldModel{FormModel: model.FormModel,
+			@c.Field(c.FieldModel{FormModel: model.FormModel,
 				Label: "Email", Name: "Email", Required: true,
 			})
 		}
-		@button(templ.Attributes{"type": "submit"}) {
+		@c.Button(templ.Attributes{"type": "submit"}) {
 			Envoyer le lien de réinitialisation
 		}
 	}
@@ -42,19 +44,19 @@ templ PasswordForgottenForm(model PasswordForgottenModel) {
 
 templ ResetPasswordPage() {
 	@html("Woody Wood Gate - Réinitialisation du mot de passe") {
-		@ResetPasswordForm(NewFormModel(nil, nil))
+		@ResetPasswordForm(c.NewFormModel(nil, nil))
 	}
 }
 
-templ ResetPasswordForm(model FormModel) {
-	@authForm("Réinitialisation du mot de passe", model) {
-		@field(FieldModel{FormModel: model,
+templ ResetPasswordForm(model c.FormModel) {
+	@c.AuthForm("Réinitialisation du mot de passe", model) {
+		@c.Field(c.FieldModel{FormModel: model,
 			Label: "Nouveau mot de passe", Name: "Password", Required: true, Type: "password",
 		})
-		@field(FieldModel{FormModel: model,
+		@c.Field(c.FieldModel{FormModel: model,
 			Label: "Confirmer le mot de passe", Name: "Confirm", Required: true, Type: "password",
 		})
-		@button(templ.Attributes{"type": "submit"}) {
+		@c.Button(templ.Attributes{"type": "submit"}) {
 			Changer le mot de passe
 		}
 	}
