--- a/views/components/form-components.templ
+++ b/views/components/form-components.templ
@@ -1,8 +1,8 @@
 package views
 
 import (
-	"net/url"
 	"github.com/go-playground/validator/v10"
+	"net/url"
 )
 
 var (
@@ -58,7 +58,7 @@ func NewFormModel(values url.Values, fieldErrors validator.ValidationErrorsTrans
 	return model
 }
 
-templ field(model FieldModel) {
+templ Field(model FieldModel) {
 	<input
 		name={ model.Name }
 		placeholder={ model.Label }
@@ -76,10 +76,10 @@ templ field(model FieldModel) {
 		{ model.Attrs... }
 		value={ model.Values.Get(model.Name) }
 	/>
-	@formError(model.Errors.Fields[model.Name])
+	@FormError(model.Errors.Fields[model.Name])
 }
 
-templ button(attrs ...templ.Attributes) {
+templ Button(attrs ...templ.Attributes) {
 	<button
 		class={
 			"bg-blue-500 text-white py-1 px-3 rounded-sm relative",
@@ -95,29 +95,42 @@ templ button(attrs ...templ.Attributes) {
 	</button>
 }
 
-templ formError(err string, attrs ...templ.Attributes) {
+templ FormError(err string, attrs ...templ.Attributes) {
 	if err != "" {
 		<span { expect1(attrs)... } class="text-red-500 text-center">{ " " + err }</span>
 	}
 }
 
-templ authForm(title string, model FormModel, attrs ...templ.Attributes) {
-	<form
-		{ expect1(attrs)... }
-		hx-post
-		hx-swap="outerHTML"
-		hx-disabled-elt="button"
-		class="w-80 rounded m-auto p-4 mt-20 shadow-md flex flex-col gap-2 [&_button]:last-of-type:mt-4 print:shadow-none"
+templ AuthForm(title string, model FormModel, attrs ...templ.Attributes) {
+	@Card(title) {
+		<form
+			{ expect1(attrs)... }
+			hx-post
+			hx-swap="outerHTML"
+			hx-disabled-elt="button"
+			class="flex flex-col gap-2 [&_button]:last-of-type:mt-4"
+		>
+			<h1 class="text-2xl mb-4 text-center">
+				{ title }
+			</h1>
+			{ children... }
+			@FormError(model.Errors.Global)
+		</form>
+	}
+}
+
+templ Card(title string) {
+	<div
+		class="w-80 rounded m-auto p-4 mt-20 shadow-md flex flex-col gap-2 print:shadow-none"
 	>
 		<h1 class="text-2xl mb-4 text-center">
 			{ title }
 		</h1>
 		{ children... }
-		@formError(model.Errors.Global)
-	</form>
+	</div>
 }
 
-templ authFooter(attrs ...templ.Attributes) {
+templ AuthFooter(attrs ...templ.Attributes) {
 	<p { expect1(attrs)... } class="w-80 m-auto mt-10 text-center">
 		{ children... }
 	</p>
