--- a/views/login.templ
+++ b/views/login.templ
@@ -1,5 +1,7 @@
 package views
 
+import c "woody-wood-portail/views/components"
+
 type LoginFormValues struct {
 	Email    string `form:"Email"    tr:"Email"        validate:"required,email"`
 	Password string `form:"Password" tr:"Mot de passe" validate:"required"`
@@ -7,8 +9,8 @@ type LoginFormValues struct {
 
 templ LoginPage() {
 	@html("Woody Wood Gate - Connexion") {
-		@LoginForm(FormModel{})
-		@authFooter() {
+		@LoginForm(c.FormModel{})
+		@c.AuthFooter() {
 			Pas encore de compte ?
 			<br/>
 			<a href="/register" class="text-blue-500">
@@ -18,18 +20,18 @@ templ LoginPage() {
 	}
 }
 
-templ LoginForm(model FormModel) {
-	@authForm("Connexion", model) {
-		@field(FieldModel{FormModel: model,
-			Label: "Email", Name: "Email", Required: true,
+templ LoginForm(model c.FormModel) {
+	@c.AuthForm("Connexion", model) {
+		@c.Field(c.FieldModel{FormModel: model,
+			Label: "Email", Name: "Email", Type: "email", Required: true, Attrs: templ.Attributes{"autocomplete": "email"},
 		})
-		@field(FieldModel{FormModel: model,
-			Label: "Mot de passe", Name: "Password", Type: "password", Required: true,
+		@c.Field(c.FieldModel{FormModel: model,
+			Label: "Mot de passe", Name: "Password", Type: "password", Required: true, Attrs: templ.Attributes{"autocomplete": "current-password"},
 		})
 		<a href="/password-forgotten" class="text-blue-500 text-xs text-end w-full">
 			Mot de passe oublié ?
 		</a>
-		@button(templ.Attributes{"type": "submit"}) {
+		@c.Button(templ.Attributes{"type": "submit"}) {
 			Se connecter
 		}
 	}
